--- a/package.json
+++ b/package.json
@@ -3,23 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "next dev -p 4001",
+    "build": "cross-env NODE_ENV=production && next build",
+    "start": "next start -p 4000",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@vercel/og": "^0.5.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "next": "13.5.1",
-    "postcss": "8.4.30",
+    "next-secure-headers": "^2.2.0",
+    "next-seo": "^6.1.0",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-icons": "^4.11.0",
+    "sharp": "^0.32.6",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "autoprefixer": "^10.4.15",
+    "critters": "^0.0.20",
+    "cross-env": "^7.0.3",
+    "cssnano": "^6.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "postcss": "^8.4.30",
+    "prettier": "^3.0.3",
+    "prettier-eslint": "^15.0.1",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "resize-observer-polyfill": "^1.5.1",
+    "stylelint": "^15.10.3",
+    "tailwindcss": "^3.3.3"
   }
 }
