--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "sharp": "^0.32.6",
+    "tailwind-merge": "^1.14.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
