--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "resize-observer-polyfill": "^1.5.1",
     "stylelint": "^15.10.3",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3"
   }
 }
