--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^10.16.4",
     "next": "13.5.1",
     "next-secure-headers": "^2.2.0",
     "next-seo": "^6.1.0",
