--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/react-scroll": "^1.8.8",
     "autoprefixer": "^10.4.15",
     "critters": "^0.0.20",
     "cross-env": "^7.0.3",
