--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
     "sharp": "^0.32.6",
+    "simplebar-react": "^3.2.4",
     "tailwind-merge": "^1.14.0",
     "typescript": "5.2.2"
   },
